<resources>
    <string name="app_name">Astro</string>

    //menu
    <string name="astro">AstroWeather</string>
    <string name="start">Start</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    //about
    <string name="poweredBy">Powered by:</string>
    <string name="author">Krystian Bendinger</string>
    <string name="version">Version:</string>
    <string name="versionNO">0.1</string>
    <string name="abouts">Astro Weather App</string>

    //options
    <string name="localization">Localization</string>
    <string name="width">Longtutide:</string>
    <string name="height">Latutide:</string>
    <string name="refreshing">Refreshing</string>
    <string name="min">min</string>

    //astro
    <string name="sun">Sun</string>
    <string name="moon">Moon</string>

    //sun
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="dawn">Dawn</string>
    <string name="dusk">Dusk</string>
    <string name="time">Current time: </string>
    <string name="azymutSunrise">Azimuth Sunrise</string>
    <string name="azymutSunset">Azimuth Sunset</string>


    //moon
    <string name="moonrise">Moonrise</string>
    <string name="moonset">Moonset</string>
    <string name="nearest">New moon</string>
    <string name="full">Full Moon</string>
    <string name="phase">Phase</string>
    <string name="day">Age</string>
    <string name="gps">Coordinates: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
